--- a/books.css
+++ b/books.css
@@ -68,10 +68,6 @@ main {
   background-color: royalblue;
 }
 
-.book-box {
-  /*background-color: royalblue;*/
-}
-
 .overlay-screen {
     background-color: rgb(248,248,248);
     height: 100%;
@@ -215,8 +211,8 @@ ul.titles li:last-child {
 
 p.author-name {
   color: #555;
-  font-size: 21px;
-  font-weight: 600;
+  font-size: 24px;
+  font-weight: 500;
 }
 
 .book-name {
@@ -228,19 +224,22 @@ p.author-name {
 .thread-name {
   display: block;
   font-size: 16px;
-  color: rgba(85,85,85,1) !important;
-  color: white !important;
+  /*color: rgba(85,85,85,1) !important;*/
+  /*color: white !important;*/
+
+  color: rgba(255,255,255,0.8) !important;
   /* FIX */
   text-transform: lowercase;
-  /*font-weight: 300;*/
+  font-weight: 300;
 
   /*margin: 12px 0 0;*/
   padding: 8px 12px;
-  padding: 10px 12px;
+  padding: 14px 12px 10px;
   border-radius: 0 0 4px 4px;
   border: none;
-  background: #777;
+  background: rgba(255,255,255,0.1);
   margin-top: -4px;
+  z-index: 1;
 }
 
 .yc i {
@@ -248,8 +247,8 @@ p.author-name {
 }
 
 .thread-name::after {
-  content: '\f064';
-  content: '>';
+  /*content: '\f064';*/
+  /*content: '>';*/
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -271,7 +270,7 @@ p.author-name {
     font-size: 80%;
     font-variant: small-caps;
     color: #555 !important;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .cat-index-wrapper {
@@ -560,39 +559,98 @@ min-width: 96px;
 
 .book-cover-t {
   /*transform: perspective(800px) rotateY(24deg) skew(0deg, 0deg) translate(-20px, -28px);*/
+
   transform: perspective(900px) rotateY(12deg) skew(0deg, 4deg) translate(-24px, -36px);
+
+  transform: perspective(900px) rotateY(12deg) skew(0deg, 4deg) translate(0px, -42px);
+
+
   /*transform: perspective(900px) rotateY(24deg) skew(0deg, 2deg);*/
   /* horizontal base */
 
+  box-sizing: content-box;
+
   border-radius: 2px;
   overflow: hidden;
+
+  margin-right: 20px;
+  border: solid 12px #f6f6f6;
+
+  /* !!! */
+  width: 100px;
+  height: auto;
+  /*min-width: 96px;*/
 }
 
 .book-details {
   background: #f6f6f6;
-  min-height: 174px;
+  /*min-height: 184px;*/
   /* 160px + extra 10+4 cause of the img height */
   /* NEED TO FIX WITH FLEX, TO PUSH DOWN */
   border-radius: 4px;
-  padding: 20px 30px 0 0;
+  padding: 20px 30px 0 12px;
+  z-index: 2;
 }
 
 .book-box {
+
+  /*overflow: auto;*/
+
   /*position: absolute;
   left: 0;
   right: 0;*/
-  display: flex;
+  /*display: -webkit-flex;*/
+   /*display: flex;*/
+   /*-webkit-flex-direction: row;*/
+   /*flex-direction: row;*/
+   /*-webkit-justify-content: flex-start;*/
+   /*justify-content: flex-start;*/
+
+
+   /*display: -webkit-flex;*/
+/*display: flex;*/
+/*-webkit-align-items: center;*/
+/*align-items: center;*/
+/*-webkit-justify-content: center;*/
+/*justify-content: center;*/
+/* You can set flex-wrap and flex-direction individually */
+/*-webkit-flex-direction: row;*/
+/*flex-direction: row;*/
+/*-webkit-flex-wrap: wrap;*/
+
+/*flex-wrap: wrap;*/
+
+/* Or do it all in one line with flex flow */
+/*-webkit-flex-flow: row wrap;*/
+/*flex-flow: row wrap;*/
+
+/* tweak the where items line up on the row */
+/* valid values are: flex-start, flex-end, space-between, space-around, stretch */
+/*-webkit-align-content: flex-end;*/
+/*align-content: flex-end;*/
+
   margin: 0 0 40px;
-  padding: 0 20px;
+  padding: 0 0px;
   /*max-width: 1024px;*/
+  /*width: 800px;*/
   /*background: grey;*/
 }
 
 .book-card {
   /*background: white;*/
-  min-width: 400px;
-  max-width: 600px;
+
+  /*min-width: 400px;
+  max-width: 600px;*/
+
+  width: 450px;
+  /*min-height: 300px;*/
+
   margin: 20px 60px 20px 0;
+
+  /*float: left;*/
+  /*  FIX */
+
+  display: inline-block;
 }
 
 .book-card .book-cover {
@@ -603,9 +661,9 @@ min-width: 96px;
 }
 
 .book-card .index-item {
-  padding: 6px 11px 8px !important;
+  padding: 6px 10px 7px !important;
   /* DELETE important */
-  font-size: 18px;
+  font-size: 16px;
   color: white;
   font-weight: 400 !important;
   background: #999 !important;
@@ -621,9 +679,13 @@ min-width: 96px;
     height: 100%;
     -webkit-perspective: 400px;
 }
+
 .book-cover-t img {
-    height: 100%;
+    /*height: 100%;*/
+    /*height: auto;*/
+    width: 100%;
     -webkit-perspective: 400px;
+    border-radius: 2px;
 }
 
 img {
@@ -664,10 +726,10 @@ ul li .light {
 }
 
 .book-width {
-    border-left: 12px solid #f2f2f2;
+    /*border-left: 12px solid #f2f2f2;
     border-left: 12px solid #888;
     box-shadow: -2px 0 #e4e4e4;
-    box-shadow: -2px 0 #999;
+    box-shadow: -2px 0 #999;*/
 
     /* need to make a div to assign transform */
 }
